<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/md_theme_light_primaryContainer"
    android:paddingLeft="16sp"
    android:paddingRight="16sp"
    tools:context=".ui.CustomerDetailFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_customer_creation"
        android:layout_width="132dp"
        android:layout_height="117dp"
        android:background="@drawable/shape_spinner"
        android:backgroundTint="@color/material_dynamic_primary90"
        android:src="@drawable/icon_person_customer_detail"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ended"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/started"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />


    <LinearLayout
        android:id="@+id/lldatoscontacto_customer_detail"
        android:layout_width="0dp"
        android:layout_height="104dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_spinner"
        android:backgroundTint="@color/material_dynamic_primary90"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ended"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/started"
        app:layout_constraintTop_toBottomOf="@+id/lldatospersonales_customer_detail"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txvcontato_customer_detail"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:fontFamily="@font/opensans_condensed_bold"
            android:text="@string/txvdatoscontacto_customer_detail"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txvemail_customer_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_bold"
            android:text="@string/txvemail_customer_detail" />

        <TextView
            android:id="@+id/txvtelefono_customer_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_bold"
            android:text="@string/txvtelefono_customer_detail" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lldatospersonales_customer_detail"
        android:layout_width="0dp"
        android:layout_height="104dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/shape_spinner"
        android:backgroundTint="@color/material_dynamic_primary90"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ended"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/started"
        app:layout_constraintTop_toBottomOf="@+id/img_customer_creation"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txvpersonales_customer_detail"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:fontFamily="@font/opensans_condensed_bold"
            android:text="@string/txv_customer_detail"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txvnombre_customer_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_bold"
            android:text="@string/txvnombre_customer_detail" />

        <TextView
            android:id="@+id/txvid_customer_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_bold"
            android:text="@string/txvid_customer_detail" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llubicacion_customer_detail"
        android:layout_width="0dp"
        android:layout_height="104dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_spinner"
        android:backgroundTint="@color/material_dynamic_primary90"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ended"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/started"
        app:layout_constraintTop_toBottomOf="@+id/lldatoscontacto_customer_detail"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txvubicaion_customer_detail"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:fontFamily="@font/opensans_condensed_bold"
            android:text="@string/txvubicaion_customer_detail"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txvciudad_customer_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_bold"
            android:text="@string/txvciudad_customer_detail" />

        <TextView
            android:id="@+id/txvdireccion_customer_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_bold"
            android:text="@string/txvdireccion_customer_detail" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>